versions/26.1.2/translated/de_de/develop/commands/basics.md
---
title: Befehle erstellen
description: Befehle mit komplexen Parametern und Aktionen erstellen.
authors:
  - Atakku
  - dicedpixels
  - haykam821
  - i509VCB
  - Juuxel
  - MildestToucan
  - modmuss50
  - mschae23
  - natanfudge
  - Pyrofab
  - SolidBlock-cn
  - Technici4n
  - Treeways
  - xpple
resources:
  https://github.com/Mojang/brigadier: Quellcode für Brigadier
---

Durch das Erstellen von Befehlen kann ein Mod-Entwickler Funktionen hinzufügen, die durch einen Befehl verwendet werden können. Dieses Tutorial wird dir erklären, wie man Befehle registriert und die allgemeine Befehlsstruktur von Brigadier.

::: info

[Brigadier](https://github.com/Mojang/brigadier) ist ein von Mojang für Minecraft entwickelter Open-Source-Befehlsparser und -Dispatcher. Es ist eine baumbasierte Befehlsbibliothek, in der du einen Baum von Befehlen und Argumenten aufbaust.

:::

## Das Interface `Command` {#the-command-interface}

`com.mojang.brigadier.Command` ist ein funktionales Interface, das einen bestimmten Code ausführt und in bestimmten Fällen eine `CommandSyntaxException` auslöst. Er hat einen generischen Typ `S`, der den Typ der _Befehlsquelle_ definiert.
Die Befehlsquelle liefert einen Kontext, in dem ein Befehl ausgeführt wurde. In Minecraft ist die Befehlsquelle normalerweise ein `CommandSourceStack`, der einen Server, einen Befehlsblock, eine Remote-Verbindung (RCON), einen Spieler oder eine Entität darstellen kann.

Die einzige Methode in `Command`, `run(CommandContext<S>)` nimmt einen `CommandContext<S>` als einzigen Parameter und gibt eine ganze Zahl zurück. Der Befehlskontext enthält die Befehlsquelle von `S` und ermöglicht es dir, Argumente zu erhalten, die geparsten Befehlsknoten zu betrachten und die in diesem Befehl verwendete Eingabe zu sehen.

Wie andere funktionale Interfaces wird es in der Regel als Lambda oder als Methodenreferenz verwendet:

```java
Command<CommandSourceStack> command = context -> {
    return 0;
};
```

Die Ganzzahl kann als Ergebnis des Befehls betrachtet werden. Normalerweise bedeuten Werte kleiner oder gleich Null, dass ein Befehl fehlgeschlagen ist und nichts machen wird. Positive Werte bedeuten, dass der Befehl erfolgreich war und etwas gemacht hat. Brigadier bietet eine Konstante zur Anzeige von Erfolg; `Befehl#SINGLE_SUCCESS`.

### Was kann der `CommandSourceStack` machen? {#what-can-the-servercommandsource-do}

Ein `CommandSourceStack` liefert einen zusätzlichen implementierungsspezifischen Kontext, wenn ein Befehl ausgeführt wird. Dazu gehört die Möglichkeit, die Entität, die den Befehl ausgeführt hat, die Welt, in der der Befehl ausgeführt wurde, oder den Server, auf dem der Befehl ausgeführt wurde, zu ermitteln.

Du kannst auf die Befehlsquelle von einem Befehlskontext aus zugreifen, indem du `getSource()` für die Instanz `CommandContext` aufrufst.

```java
Command<CommandSourceStack> command = context -> {
    CommandSourceStack source = context.getSource();
    return 0;
};
```

## Einen einfachen Befehl registrieren {#registering-a-basic-command}

Befehle werden innerhalb des `CommandRegistrationCallback` registriert, der von der Fabric API bereitgestellt wird.

::: info

Informationen zur Registrierung von Callbacks findest du in der Anleitung [Events](../events).

:::

Das Event sollte in deinem [Mod Initialisierer](../getting-started/project-structure#entrypoints) registriert werden.

Der Callback hat drei Parameter:

- `CommandDispatcher<CommandSourceStack> dispatcher` - Wird genutzt, um Befehle zu registrieren, parsen und auszuführen. `S` ist der Typ
  der Befehlsquelle, die der Command Dispatcher unterstützt.
- `CommandBuildContext registryAccess` - Bietet eine Abstraktion zu Registrys, die an bestimmte Befehlsargumente übergeben werden können
  Argument-Methoden
- `Commands.Commands environment` - Identifiziert den Typ des Servers, auf dem die Befehle registriert werden.

Im Mod-Initialisierer registrieren wir nur einen einfachen Befehl:

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#test_command

In der Methode `sendSuccess()` ist der erste Parameter der zu sendende Text, der ein `Supplier<Component>` ist, um zu vermeiden, dass `Component`-Objekte instanziert werden, wenn sie nicht benötigt werden.

Der zweite Parameter bestimmt, ob die Rückmeldung an andere Moderatoren gesendet werden soll. Im Allgemeinen sollte der Befehl `false` sein, wenn er etwas abfragen soll, ohne die Welt tatsächlich zu beeinflussen, wie zum Beispiel die aktuelle Zeit oder den Punktestand eines Spielers. die Zeit zu ändern oder den Spielstand einer Person zu ändern, sollte er `true` sein.

Wenn der Befehl fehlschlägt, kannst du, anstatt `sendSuccess()` aufzurufen, direkt eine beliebige Ausnahme auslösen, die vom Server oder Client entsprechend behandelt wird.

Die `CommandSyntaxException` wird im Allgemeinen ausgelöst, um Syntaxfehler in Befehlen oder Argumenten aufzuzeigen. Du kannst auch deine eigene Exception implementieren.

Um diesen Befehl auszuführen, musst du `/test_command` eingeben, wobei Groß- und Kleinschreibung zu beachten sind.

::: info

Ab diesem Punkt werden wir die Logik, die in den an `.executes()`-Builder übergebenen Lambda-Ausdrücken geschrieben ist, in einzelne Methoden extrahieren. Wir können dann eine Methodenreferenz an `.executes()` übergeben. Dies dient der Übersichtlichkeit.

:::

### Umgebung der Registrierung {#registration-environment}

Falls gewünscht, kannst du auch dafür sorgen, dass ein Befehl nur unter bestimmten Umständen registriert wird, zum Beispiel nur in der dedizierten Umgebung:

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#dedicated_command{2}

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_dedicated_command

### Befehlsanforderungen {#command-requirements}

Angenommen, du hast einen Befehl, den nur Moderatoren ausführen können sollen. An dieser Stelle kommt die Methode `requires()` ins Spiel. Die Methode `requires()` hat ein Argument vom Typ `Predicate<S>`, das einen `CommandSourceStack` bereitstellt, mit dem getestet und festgestellt wird, ob die `CommandSource` den Befehl ausführen kann.

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#required_command{3}

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_required_command

Dieser Befehl wird nur ausgeführt, wenn die Quelle des Befehls mindestens ein Moderator ist, einschließlich Befehlsblöcke. Andernfalls ist der Befehl nicht registriert.

Dies hat den Nebeneffekt, dass dieser Befehl in der <kbd>Tab</kbd>-Vervollständigung für alle, die nicht Moderator sind, nicht angezeigt wird. Das ist auch der Grund, warum du die meisten Befehle nicht mit <kbd>Tab</kbd> vervollständigen kannst, wenn du keine Cheats aktivierst.

### Unterbefehle {#sub-commands}

Um einen Unterbefehl hinzuzufügen, registriere den ersten buchstäblichen Knoten des Befehls ganz normal. Um einen Unterbefehl zu haben, musst du den nächsten buchstäblichen Knoten an den bestehenden Knoten anhängen.

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#sub_command_one{3}

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_sub_command_one

Ähnlich wie die Argumente können auch die Unterbefehlsknoten auf optional gesetzt werden. Im folgenden Fall sind sowohl `/command_two` als auch `/command_two sub_command_two` gültig.

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#sub_command_two{2,8}

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_command_sub_command_two

## Client-Befehle {#client-commands}

Ebenso stellt die Fabric-API das Event `ClientCommandRegistrationCallback` im Paket `net.fabricmc.fabric.api.client.command.v2` bereit, mit dem clientseitige Befehle registriert werden können, wobei die Standardklasse `Commands` durch die entsprechende Klasse `ClientCommands` ersetzt wird. Der Code sollte nur im clientseitigen Code vorhanden sein.

<<< @/reference/26.1.2/src/client/java/com/example/docs/client/command/ExampleModClientCommands.java#register_command

## Befehlsumleitungen {#command-redirects}

Befehlsumleitungen - auch bekannt als Aliase - sind eine Möglichkeit, die Funktionalität eines Befehls auf einen anderen umzuleiten. Dies ist nützlich, wenn du den Namen eines Befehls ändern möchtest, aber den alten Namen beibehalten willst.

::: warning

Brigadier [wird nur Befehlsknoten mit Argumenten umleiten](https://github.com/Mojang/brigadier/issues/46). Wenn du einen Befehlsknoten ohne Argumente umleiten willst, gib einen `.executes()` Builder mit einem Verweis auf die gleiche Logik wie im Beispiel beschrieben an.

:::

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#redirect_command

<<< @/reference/26.1.2/src/main/java/com/example/docs/command/ExampleModCommands.java#execute_redirected_by

## FAQ {#faq}

### Warum kompiliert mein Code nicht? {#why-does-my-code-not-compile}

- Abfangen oder Auslösen einer `CommandSyntaxException` - `CommandSyntaxException` ist keine `RuntimeException`. Wenn du sie auslöst, sollte sie in Methoden ausgelöst werden, die `CommandSyntaxException` in den Methodensignaturen auslösen, oder sie sollte abgefangen werden.
  Brigadier wird die checked Exceptions behandeln und die entsprechende Fehlermeldung im Spiel für dich weiterleiten.

- Probleme mit generischen Typen - Es kann sein, dass du hin und wieder ein Problem mit generischen Typen hast. Wenn du Serverbefehle registrierst (was in den meisten Fällen der Fall ist), stelle sicher, dass du `Commands.literal` oder `Commands.argument` anstelle von `LiteralArgumentBuilder.literal` oder `RequiredArgumentBuilder.argument` benutzt.

- Überprüfe die Methode `sendSuccess()` – Möglicherweise hast du vergessen, einen booleschen Wert als zweites Argument anzugeben. Denke auch daran dass seit Minecraft 1.20 der erste Parameter `Supplier<Component>` anstelle eines `Component` ist.

- Ein Befehl sollte eine ganze Zahl zurückgeben - Bei der Registrierung von Befehlen akzeptiert die Methode `executes()` ein `Command` Objekt, das normalerweise ein Lambda ist. Das Lambda sollte eine ganze Zahl zurückgeben, anstelle anderen Typen.

### Kann ich Befehle zur Laufzeit registrieren? {#can-i-register-commands-at-runtime}

::: warning

Du kannst dies machen, aber es ist nicht empfohlen. Du würdest die `Commands` vom Server bekommen und fügst alle gewünschten Befehle zu seinem `CommandDispatcher` hinzu.

Danach musst du den Befehlsbaum erneut an jeden Spieler mit `Commands.sendCommands(ServerPlayer)` senden.

Dies ist erforderlich, da der Client den Befehlsbaum, den er bei der Anmeldung (oder beim Senden von Moderator-Paketen) erhält, lokal zwischenspeichert, um Fehlermeldungen zu vervollständigen.

:::

### Kann ich die Registrierung von Befehlen während der Laufzeit aufheben? {#can-i-unregister-commands-at-runtime}

::: warning

Du kannst dies auch tun, allerdings ist es viel weniger stabil als die Registrierung von Befehlen zur Laufzeit und könnte unerwünschte Nebenwirkungen haben.

Um die Dinge einfach zu halten, musst du Reflection auf Brigadier anwenden und Knoten entfernen. Danach musst du den Befehlsbaum erneut an jeden Spieler mit `sendCommands(sendCommands)` senden.

Wenn du den aktualisierten Befehlsbaum nicht sendest, kann es sein, dass der Client denkt, dass der Befehl noch existiert, obwohl die Ausführung am Server fehlschlägt.

:::

<!---->
